<resources>
    <string name="action_send">Send</string>
    <string name="action_send_tkn">Send %1$s</string>
    <string name="recipient">Recipient</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="title_account_list">Wallets</string>
    <string name="confirm_delete_account">Make sure that you have a backup of this wallet.</string>
    <string name="copy">Copy to clipboard</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="ok">OK</string>
    <string name="barcode_error_format">Invalid barcode format: %s</string>
    <string name="title_delete_account">Are you sure you want to delete wallet?</string>
    <string name="error_import">Wallet Import Error</string>
    <string name="error_deleting_account">Error deleting wallet</string>
    <string name="do_manage_make_backup">Did you manage to make a backup?</string>
    <string name="yes_continue">Yes, continue</string>
    <string name="no_repeat">No, repeat</string>
    <string name="transfer">Transfer %s</string>
    <string name="action_buy">Buy %s</string>
    <string name="wallet_action_buy">Buy</string>
    <string name="empty" translatable="false" />
    <string name="try_again">Try again</string>
    <string name="already_have_account">Already have a wallet?</string>
    <string name="action_create_new_account">Create a New Wallet</string>
    <string name="action_add_account">Add Account</string>
    <string name="add_or_manage_wallet">Add or Manage Wallet</string>
    <string name="hint_info">Information</string>
    <string name="add_account_description">Add a new account to your existing wallet. Same seed phrase, new address.</string>
    <string name="account_added_success">New account added successfully!</string>
    <string name="derived_account_private_key_detail">This is %1$s, derived from your master wallet. You can export its unique private key. To see the seed phrase, go to the master wallet settings.</string>
    <string name="hd_account_label">Account %1$d</string>
    <string name="derived_from_master">Derived from master wallet</string>
    <string name="master_hd_wallet">Master Wallet</string>
    <string name="unknown_error">An error has occurred.</string>
    <string name="no_tokens">No tokens found.</string>
    <string name="title_my_address">My Address</string>
    <string name="title_activity_send">Send</string>
    <string name="title_activity_confirmation">Confirm</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="title_dialog_error">Error</string>
    <string name="title_dialog_handling">Handling…</string>
    <string name="title_dialog_add_account">Add wallet</string>
    <string name="title_dialog_deposit">How would you like to buy?</string>
    <string name="toast_message_wallet_imported">The wallet was imported</string>
    <string name="toast_message_wallet_exported">A backup was created</string>
    <string name="toast_qr_code_no_address">QR code doesn\'t contain valid address</string>
    <string name="toast_qr_scanning_requires_api_24">QR scanning requires Android 7.0 (API level 24) or above.</string>
    <string name="label_select_network">Select Network</string>
    <string name="label_all_networks">All Networks (Scan All)</string>
    <string name="select_network">Select Network</string>
    <string name="scanning_network">Scanning network…</string>
    <string name="checking_network">Checking %1$s…</string>
    <string name="scanning_networks_count">%1$d networks remaining…</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_gas_limit">Gas Limit</string>
    <string name="label_gas_price">Gas Price</string>
    <string name="label_gas_price_gwei">Gas Price (GWEI)</string>
    <string name="label_gas_price_max">Max Fee (GWEI)</string>
    <string name="label_old_gas_price">Old Gas Price</string>
    <string name="label_network_fee">Network Fee (Maximum)</string>
    <string name="button_ok">OK</string>
    <string name="subtitle_from">From</string>
    <string name="subtitle_to">To</string>
    <string name="subtitle_gas_fee">Gas Fee</string>
    <string name="subtitle_gas_price">Gas Price</string>
    <string name="subtitle_gas_used">Gas Used</string>
    <string name="subtitle_network_fee">Network Fee</string>
    <string name="subtitle_transaction_num">Transaction #</string>
    <string name="subtitle_transaction_hash_num">Transaction Hash #</string>
    <string name="subtitle_transaction_time">Transaction Time</string>
    <string name="subtitle_block_num">Block #</string>
    <string name="subtitle_block">Block</string>
    <string name="action_share">Share</string>
    <string name="action_more_details">More details</string>
    <string name="action_add_wallet">Add wallet</string>
    <string name="action_open_etherscan">View in Block Explorer</string>
    <string name="action_coinbase" translatable="false">Coinbase</string>
    <string name="action_localeth" translatable="false">LocalEthereum</string>
    <string name="coming_soon">Coming soon</string>
    <string name="action_changelly">Changelly (Buy with Credit card)</string>
    <string name="action_change">Change</string>
    <string name="subject_transaction_detail">Transaction detail</string>
    <string name="error_fail_generate_qr">Could not generate qr code.</string>
    <string name="error_invalid_address">Invalid address</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="error_transaction_failed">Transaction error</string>
    <string name="error_transaction_may_fail">Node indicates transaction may fail. Continue?</string>
    <string name="error_import_failed">Failed to import token</string>
    <string name="error_must_numeric">must be a numeric value.</string>
    <string name="transaction_succeeded">Transaction successful</string>
    <string name="NA">N/A</string>
    <string name="error_wallet_not_selected">Wallet is not selected</string>
    <string name="no_transactions_yet">Activities will appear here</string>
    <string name="unknown_balance_without_symbol" translatable="false">--</string>
    <string name="dummy_transaction_value" translatable="false">&#45;&#45;</string>
    <string name="title_dialog_sending">Sending…</string>
    <string name="scan_qr">Get address from QR Code</string>
    <string name="info_gas_price">The higher the gas price, the more expensive your transaction fee will be, but the quicker your transaction will be processed by the Ethereum network.</string>
    <string name="info_gas_limit">The gas limit prevents smart contracts from consuming all your Ethereum. We will try to calculate the gas limit automatically for you, but some smart contracts may require a custom gas limit.</string>
    <string name="title_send_settings">Advanced</string>
    <string name="error_add_token">Could not add token.</string>
    <string name="error_already_added">Already added</string>
    <string name="error_export">Failed to export the wallet</string>
    <string name="error_fail_load_tokens">Failed to load tokens list</string>
    <string name="error_create_wallet">Failed to create a wallet</string>
    <string name="app_name" translatable="false">RamaPay</string>
    <string name="all">All</string>
    <string name="currency">Currencies</string>
    <string name="advanced">Advanced Options</string>
    <string name="copy_wallet_address">Copy Wallet Address</string>
    <string name="wallet_created_successfully">✓ Your wallet has been created successfully and is securely stored!</string>
    <string name="wallet_key_verification_failed">Warning: Unable to verify wallet key storage. Please backup your wallet immediately or re-import to ensure your funds are safe.</string>
    <string name="no_internet_connection">No internet connection. Please check your network and try again.</string>
    <string name="no_hd_wallet_found">No HD wallet found. Please create a wallet with a seed phrase first.</string>
    <string name="select_master_wallet">Select Master Wallet</string>
    <string name="master_wallet">Master Wallet</string>
    <string name="select_wallet_to_derive_from">Choose which wallet to derive a new account from</string>
    <string name="select_wallet_to_discover">Select which wallet to scan for existing accounts</string>
    <string name="tap_wallet_to_discover">Tap a wallet to start scanning for accounts</string>
    <string name="wallet_default_name">Wallet</string>
    <string name="derived_accounts_count">%1$d derived accounts (Next: Account %2$d)</string>
    <string name="advanced_options">Advanced</string>
    <string name="add_account_title">Add Account</string>
    <string name="choose_action">Choose an action</string>
    <string name="add_next_account">Add Next Account</string>
    <string name="add_next_account_description">Create the next sequential derived account</string>
    <string name="discover_all_accounts">Discover All Accounts</string>
    <string name="add_bulk_wallets">Add Bulk Wallets</string>
    <string name="add_bulk_wallets_desc">Add multiple wallets at once</string>
    <string name="how_many_wallets">How many wallets to add?</string>
    <string name="bulk_add_message">Enter the number of wallets you want to add (1–20). They will be created from index %1$d onwards.</string>
    <string name="add_wallets">Add %d Wallets</string>
    <string name="adding_wallets_progress">Adding wallet %1$d of %2$d...</string>
    <string name="wallets_added_success">Successfully added %d wallets</string>
    <string name="discover_all_accounts_description">Scan blockchain for accounts with transaction history</string>
    <string name="discover_all_accounts_desc_multi">Scan all master wallets for active accounts</string>
    <string name="recover_missing_account">Recover Missing Account</string>
    <string name="recover_missing_account_description">Manually recover a specific account by index</string>
    <string name="recover_missing_account_desc">Derive a specific account by index</string>
    <string name="recover_missing_account_instructions">Enter the account index you want to recover. Account 1 = index 0, Account 2 = index 1, etc.</string>
    <string name="account_index">Account Index</string>
    <string name="account_index_hint">Enter index (e.g., 3 for Account 4)</string>
    <string name="recover_account">Recover Account</string>
    <string name="existing_accounts_for_master">Existing accounts: %s</string>
    <string name="wallet_label">Wallet</string>
    <string name="action_cancel">Cancel</string>
    <string name="requester_url">Requester</string>
    <string name="dialog_title_sign_message">Sign Message</string>
    <string name="business_logo">Business Logo</string>
    <string name="change_logo">Change Logo</string>
    <string name="business_information">Business Information</string>
    <string name="business_name">Business Name *</string>
    <string name="business_type">Business Type</string>
    <string name="owner_name">Owner Name</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="address_information">Address</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">PIN Code</string>
    <string name="tax_information">Tax Information</string>
    <string name="gst_number_optional">GST/Tax Number (Optional)</string>
    <string name="default_currency">Default Currency</string>
    <string name="save_profile">Save Profile</string>
</resources>