<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.ramapay.app.widget.BottomSheetToolbarView
        android:id="@+id/bottom_sheet_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:title="@string/dialog_title_sign_message" />

    <com.ramapay.app.widget.AddressDetailView
        android:id="@+id/requester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:label="@string/requester_url" />

    <com.ramapay.app.widget.AddressDetailView
        android:id="@+id/wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        custom:label="@string/wallet_label" />

    <com.ramapay.app.widget.SignDataWidget
        android:id="@+id/sign_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/Aw.Component.Separator" />

    <com.ramapay.app.widget.ConfirmationWidget
        android:id="@+id/confirmation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.ramapay.app.widget.FunctionButtonBar
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
